--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
 		<title> Subscription Form </title>
 	</head>
 	<body>
-		<form action="/action_page.php">
+		<form action="http://localhost/phpform/index.php">
   			<label for="firstname">First name:</label><br>
   			<input type="text" id="firstname" name="firstname" value="John"><br>
   			<label for="email">Email:</label><br>
