--- a/Homepage.html
+++ b/Homepage.html
@@ -13,7 +13,7 @@
 		<nav>
 			<a href=" ">Home</a>
 			<a href="Math%20Quiz.html">My Math Quiz</a>
-			<a href="Form.html" >Subscribe</a>
+			<a href="form.html" >Subscribe</a>
 		</nav>
 		<main>
 			<article>
