--- a/Homepage.html
+++ b/Homepage.html
@@ -11,9 +11,11 @@
 		</header>
 		<hr>
 		<nav>
-			<a href=" ">Home</a>
-			<a href="Math%20Quiz.html">My Math Quiz</a>
-			<a href="form.html" >Subscribe</a>
+			<a href=" ">  Home  </a>
+			&emsp;	
+			<a href="Math%20Quiz.html"> My Math Quiz </a>
+			&emsp;	
+			<a href="Form.html" > Subscribe </a>
 		</nav>
 		<main>
 			<article>
@@ -24,6 +26,7 @@
 				</section>
 				<aside>
 					<section>
+						Hi guys, this is my first entry
 						
 					</section>
 				</aside>
