--- a/Homepage.html
+++ b/Homepage.html
@@ -15,7 +15,7 @@
 			&emsp;	
 			<a href="Math%20Quiz.html"> My Math Quiz </a>
 			&emsp;	
-			<a href="Form.html" > Subscribe </a>
+			<a href="form.html" > Subscribe </a>
 		</nav>
 		<main>
 			<article>
