--- a/Math Quiz.html
+++ b/Math Quiz.html
@@ -25,19 +25,19 @@
 	<body style="background-color:powderblue;">
 		<script>	
 			document.write("What is 1 + 1")
-			document.write(\n)
+			document.write("\n")
 			wronganswer(11)
-			document.write(\n)
+			document.write("\n")
 			correctanswer(2)
-			document.write(\n)
+			document.write("\n")
 			wronganswer(3)
-			document.write(\n)
+			document.write("\n")
 			document.write("What is 3 x 4?")
-			document.write(\n)
+			document.write("\n")
 			wronganswer(34)
-			document.write(\n)
+			document.write("\n")
 			wronganswer(7)
-			document.write(\n)
+			document.write("\n")
 			correctanswer(12)
 		</script>
 	</body>
