--- a/Homepage.html
+++ b/Homepage.html
@@ -15,7 +15,7 @@
 			&emsp;	
 			<a href="Math%20Quiz.html"> My Math Quiz </a>
 			&emsp;	
-			<a href="form.html" > Subscribe </a>
+			<a href="Form.html" > Subscribe </a>
 		</nav>
 		<main>
 			<article>
@@ -25,9 +25,11 @@
 					</div>
 				</section>
 				<aside>
-					<section>
-						Hi guys, this is my first entry
-						
+					<section class="loga">
+						Hi guys, this is my first entry!
+						Today was the very first time I tried baking!
+						I went for a donut baking workshop and baked 8 donuts.
+						Mixing, glazing, proofing, ... it was so fun, and the donuts were sweet and delicious!						
 					</section>
 				</aside>
 			</article>
