--- a/Homepage.html
+++ b/Homepage.html
@@ -25,12 +25,12 @@
 					</div>
 				</section>
 				<aside>
-					<section class="loga">
+					<div class="loga">
 						Hi guys, this is my first entry!
 						Today was the very first time I tried baking!
 						I went for a donut baking workshop and baked 8 donuts.
 						Mixing, glazing, proofing, ... it was so fun, and the donuts were sweet and delicious!						
-					</section>
+					</div>
 				</aside>
 			</article>
 		</main>
