--- a/Homepage.html
+++ b/Homepage.html
@@ -21,7 +21,7 @@
 			<article>
 				<section>
 					<div>
-						<h4>About Me</h4>
+						<h4>My Blog</h4>
 					</div>
 				</section>
 				<aside>
