--- a/Homepage.html
+++ b/Homepage.html
@@ -13,9 +13,9 @@
 		<nav>
 			<a href=" ">  Home  </a>
 			&emsp;	
-			<a href="Math%20Quiz.html"> My Math Quiz </a>
+			<!-- <a href="Math%20Quiz.html"> My Math Quiz </a>
 			&emsp;	
-			<a href="Form.html" > Subscribe </a>
+			<a href="Form.html" > Subscribe </a> -->
 		</nav>
 		<main>
 			<article>
